<resources>
    <string name="app_name">B07 Demo Summer 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>
    <string name="collection_title">TAAM Collections Management</string>

    <string-array name="categories_array">
        <item>Books</item>
        <item>Movies</item>
    </string-array>

    <string-array name="arr_category">
        <item>None</item>
        <item>Jade</item>
        <item>Paintings</item>
        <item>Calligraphy</item>
        <item>Rubbings</item>
        <item>Bronze</item>
        <item>Brass</item>
        <item>Copper</item>
        <item>Gold and Silvers</item>
        <item>Lacquer</item>
        <item>Enamels</item>
    </string-array>
    <string-array name="arr_period">
        <item>None</item>
        <item>Xia</item>
        <item>Shang</item>
        <item>Zhou</item>
        <item>Chuanqiu</item>
        <item>Zhanggou</item>
        <item>Qin</item>
        <item>hang</item>
        <item>Shangou</item>
        <item>Ji</item>
        <item>South and North</item>
        <item>Shui</item>
        <item>Tang</item>
        <item>Liao</item>
        <item>Song</item>
        <item>Jin</item>
        <item>Yuan</item>
        <item>Ming</item>
        <item>Qing</item>
        <item>Modern</item>
    </string-array>
</resources>